# event_ticketing_management

./: README.md  Ticketing System.sql  pyproject.toml  shell.nix
event_ticketing/event_ticketing/: settings.py  urls.py
src/app_purchasing/: apps.py  urls.py  views.py
src/app_purchasing/templates/app_purchasing/: checkout.html  event.html  event_.html
src/event_ticketing/: asgi.py  settings.py  urls.py  wsgi.py
