[project]
name = "event_ticketing_mgmt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "theprotectorboy@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
